[gd_scene load_steps=8 format=3 uid="uid://tn2d75slppeq"]

[ext_resource type="Theme" uid="uid://ba0mnjxe2p7tf" path="res://World/UI/Elements/SkillSelection/selection.tres" id="1_75q7m"]
[ext_resource type="Texture2D" uid="uid://cma3piwulcnw" path="res://sprite/bullet.png" id="2_8evlq"]
[ext_resource type="Theme" uid="uid://204rcijbtpuh" path="res://World/UI/Elements/Buttons/DefaultTheme.tres" id="2_lfncf"]
[ext_resource type="Script" path="res://World/UI/Elements/SkillSelection/skill.gd" id="3_43jfd"]
[ext_resource type="FontVariation" uid="uid://babxdxda6jrtk" path="res://World/UI/Elements/DefaultFont.tres" id="3_amw3r"]
[ext_resource type="PackedScene" uid="uid://cglprcxjtu36d" path="res://World/UI/Elements/SkillSelection/skill_pop_up.tscn" id="7_1atqs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_x8fpl"]
atlas = ExtResource("2_8evlq")
region = Rect2(3, 3, 10, 10)

[node name="Skill" type="Button"]
custom_minimum_size = Vector2(80, 105)
offset_right = 80.0
offset_bottom = 104.0
theme = ExtResource("1_75q7m")
script = ExtResource("3_43jfd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme = ExtResource("2_lfncf")
theme_override_fonts/font = ExtResource("3_amw3r")
theme_override_font_sizes/font_size = 20
text = "Skill Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_x8fpl")
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 13
text = "Lorem ipsum dolor sit amet."
fit_content = true

[node name="SkillPopUp" parent="." instance=ExtResource("7_1atqs")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -64.0
offset_right = 48.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
